--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.4.0",
-    "googleapis": "^39.2.0"
+    "googleapis": "^39.2.0",
+    "mongoose": "^5.9.5"
   },
   "devDependencies": {
     "@types/chai": "^4.2.0",
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.17.0",
     "@types/mocha": "^5.2.7",
+    "@types/mongoose": "^5.7.6",
     "@types/node": "^12.7.2",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
