--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.4.0",
     "googleapis": "^39.2.0",
-    "mongoose": "^5.9.5"
+    "mongoose": "^5.9.5",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.0",
@@ -32,6 +33,7 @@
     "@types/mongoose": "^5.7.6",
     "@types/node": "^12.7.2",
     "@types/supertest": "^2.0.8",
+    "@types/winston": "^2.4.4",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
     "supertest": "^4.0.2",
