--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.4.0",
     "googleapis": "^39.2.0",
     "mongoose": "^5.9.5",
+    "mysql": "^2.18.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/express-session": "^1.17.0",
     "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.7.6",
+    "@types/mysql": "^2.15.9",
     "@types/node": "^12.7.2",
     "@types/supertest": "^2.0.8",
     "@types/winston": "^2.4.4",
