--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^6.4.0",
     "googleapis": "^39.2.0",
     "mongoose": "^5.9.5",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.6",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -32,7 +33,6 @@
     "@types/express-session": "^1.17.0",
     "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.7.6",
-    "@types/mysql": "^2.15.9",
     "@types/node": "^12.7.2",
     "@types/supertest": "^2.0.8",
     "@types/winston": "^2.4.4",
@@ -42,6 +42,6 @@
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.8.3"
   }
 }
