FIX: AWS Codedeploy File
- home 경로를 ~를 이용하도록 변경
- deploy.sh sudo bash ./deploy.sh로 명령어 변경

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/zennvote-backend/deploy/zennvote-backend-v2/
+    destination: ~/zennvote-backend/deploy/zennvote-backend-v2/
 hooks:
   AfterInstall:
     - location: deploy.sh
