--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,9 @@ files:
   - source: /
     destination: /home/ubuntu/zennvote-backend/deploy/zennvote-backend-v2/
 hooks:
+  BeforeInstall:
+    - location: clear.sh
+      timeout: 180
   AfterInstall:
     - location: deploy.sh
       timeout: 180
