FIX: Github actions file
- region 옵션 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws deploy create-deployment \
+            --region ap-northeast-2 \
             --application-name zennvote-backend-deploy-service
             --deployment-group-name zennvote-backend-deploy-group
             --github-location repository="zennvote/zennvote-backend-v2",commitId="${{ github.sha }}"
