--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src",
+    "start": "ts-node -r tsconfig-paths/register src",
     "lint": "tslint -p .",
     "test": "nyc mocha"
   },
